[package]
name = "intro_to_algos_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "^0"
rand = "0.7.3"
rand_core = {version = "^0", default-features = false}
rand_isaac = {version = "^0", default-features = false}
