[package]
name = "intro_to_algos_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = "^0"
lazy_static = "1.4.0"
libc = "^0"
rand = "0.8"
rand_seeder = "0.2.3"
rand_pcg = "^0"
rand_core =  "0.6.0"
rand_isaac = {version = "^0", default-features = false}
