[package]
name = "intro_to_algos_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = "^0"
clap = "2.32.0"
env_logger = "0.6.1"
hex-literal = "0.2.2" 
rust-crypto = "^0"
itertools = "^0"
lazy_static = "1.4.0"
libc = "^0"
log = "0.4.6"
md5 = "0.7"
rand = "0.8"
rand_seeder = "0.2.3"
rand_pcg = "^0"
rand_core =  "0.6.0"
rand_isaac = {version = "^0", default-features = false}
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.39"
sled = "0.34.6"
cgmath = "0.18.0"
num = "0.4.0"
num-bigint-dig = { version = "0.8.2", features = ["rand"] }
anyhow = "1.0.69"
aes = "0.8.2"
session_types = "0.3.1"
digest = "0.10.6"
result = "1.0.0"
sha-1 = "0.10.1"
ff = { version = "0.13.0", features = ["bits", "derive", "derive_bits"] }

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
