[package]
name = "fun_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
serde = "1.0.152"
session_types = "0.3.1"
yahoo_finance_api = "1.3.0"
